force-app/main/default/objects/NEPA_CE_Screening_Rule__mdt.object
<CustomObject>
    <description>CE classification rules seeded from NEPATEC v2.0 corpus (54,668 CE projects). Used by NEPA_CE_Screener Flow to classify IndividualApplication records into CE / EA / EIS and recommend the applicable CE code. Tier 1 = high-confidence agency+sector+type rules; Tier 2 = action-type discriminators; NAICS = applicant industry routing.</description>
    <label>NEPA CE Screening Rule</label>
    <pluralLabel>NEPA CE Screening Rules</pluralLabel>
    <fields>
        <fullName>Rule_Label__c</fullName>
        <description>Human-readable rule name for display and debugging.</description>
        <label>Rule Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Rule tier: 1 = high-confidence sector+type, 2 = action-type discriminator, NAICS = applicant industry routing.</description>
        <label>Tier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <description>Lead agency this rule applies to. ALL = applies to all agencies regardless of lead. Must match exactly against the agency abbreviation extracted from the related Program's lead agency Account name.</description>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value><fullName>ALL</fullName><default>false</default><label>ALL (All Agencies)</label></value>
                <value><fullName>BLM</fullName><default>false</default><label>BLM</label></value>
                <value><fullName>DOD</fullName><default>false</default><label>DOD</label></value>
                <value><fullName>DOE</fullName><default>false</default><label>DOE</label></value>
                <value><fullName>FERC</fullName><default>false</default><label>FERC</label></value>
                <value><fullName>FWS</fullName><default>false</default><label>FWS</label></value>
                <value><fullName>USACE</fullName><default>false</default><label>USACE</label></value>
                <value><fullName>USFS</fullName><default>false</default><label>USFS</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date from which this rule version is effective. The screener uses the most recent active record with Effective_Date__c on or before today. Required for administrative record traceability when PermitTEC weights are updated.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Update_Notes__c</fullName>
        <description>Free-text notes on why this rule was created or last changed (e.g., updated per PermitTEC v3.0 analysis, 2026-06). Required for audit trail on weight changes.</description>
        <label>Update Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sector_Key__c</fullName>
        <description>Distinctive sector substring to match against Program.nepa_project_sector__c using Contains logic. For multi-key matching, separate with |.</description>
        <label>Sector Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Key__c</fullName>
        <description>Distinctive project type substring to match against IndividualApplication nepa_project_type context using Contains logic.</description>
        <label>Type Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Types__c</fullName>
        <description>Semicolon-separated action types this rule applies to. Empty = applies to all action types. Matches against IndividualApplication.nepa_action_type__c.</description>
        <label>Action Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Code__c</fullName>
        <description>Normalized CE code to assign when this rule matches. Populates IndividualApplication.nepa_process_code__c.</description>
        <label>CE Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <description>Recommended NEPA review type: CE, EA, or EIS. Populates IndividualApplication.nepa_review_type__c.</description>
        <label>Review Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <description>Screening confidence output: High, Medium-High, Medium, or Low. Populates IndividualApplication.nepa_screening_confidence__c. SubscriberControlled so agencies can tune confidence levels.</description>
        <label>Confidence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Acreage_Check__c</fullName>
        <description>If true, the flow must compare IndividualApplication.nepa_disturbance_acres__c against Acreage_Threshold__c before confirming this CE code.</description>
        <label>Requires Acreage Check</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Acreage_Threshold__c</fullName>
        <description>Maximum surface disturbance in acres for this CE code to apply. 0 means no limit. SubscriberControlled so agencies can adjust thresholds to match their CFR.</description>
        <label>Acreage Threshold</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requires_GIS_Check__c</fullName>
        <description>If true, the flow checks nepa_extraordinary_circumstances__c before confirming. Extraordinary circumstances flags downgrade confidence or disqualify CE.</description>
        <label>Requires GIS Check</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>For Tier=NAICS rules only: NAICS code (2-6 digits) to match against Program.nepa_applicant_naics__c.</description>
        <label>NAICS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Namespace__c</fullName>
        <description>For Tier=NAICS rules: semicolon-separated CE code families applicable to this NAICS. Used to narrow the code search space before Tier 1/2 rules fire.</description>
        <label>CE Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidence_Modifier__c</fullName>
        <description>For Tier=NAICS rules: Low = reduce confidence for high-risk industries (NAICS 211/212). Empty = no modification.</description>
        <label>Confidence Modifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Basis__c</fullName>
        <description>Template text appended to IndividualApplication.nepa_classification_basis__c when this rule fires. Documents the rule path for the administrative record.</description>
        <label>Classification Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Evaluation priority within the same tier and agency. Lower number = evaluated first. Tier 1 rules with higher record counts get lower (earlier) priority numbers. SubscriberControlled so agencies can reorder rules.</description>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Inactive rules are skipped by the screener flow. Set to false to disable a rule without deleting it. SubscriberControlled so agencies can enable/disable rules without a package update.</description>
        <label>Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>
    <fields>
        <fullName>Record_Count_NEPATEC__c</fullName>
        <description>Number of NEPATEC v2.0 corpus records this rule was derived from. Higher counts indicate higher empirical confidence.</description>
        <label>NEPATEC Record Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>

    <!-- Mandate 2: EO 14270 temporal versioning -->
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>Date this record version becomes effective. Flows compare inp_EvaluationDate (= nepa_start_date__c on the IA) against this: only records where Effective_Start_Date__c IS NULL OR &lt;= EvaluationDate are returned. Null = effective from the beginning of time.</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sunset_Date__c</fullName>
        <description>Date after which this record version is no longer effective (EO 14270 sunset compliance). Flows filter: Sunset_Date__c IS NULL OR &gt;= EvaluationDate. Null = no sunset.</description>
        <label>Sunset Date</label>
        <type>Date</type>
    </fields>
</CustomObject>